# file_encode_helper

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainfrm.cpp  mainfrm.h  mainfrm.ui  textfileencoder.cpp  textfileencoder.h
src/: mainfrm.cpp  textfileencoder.cpp  textfileencoder.h
